# malbeot-diary-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 002_add_voice_to_personas.py  003_add_diary_summaries.py  004_fix_persona_fk_ondelete.py  005_add_email_auth_provider_social_id.py  006_add_email_verification.py
app/: config.py  database.py  main.py
app/api/v1/: alarm.py  auth.py  diary.py  feedback.py  persona.py  router.py  search.py  user.py  voice.py
app/core/: security.py
app/models/: __init__.py  ai_feedback.py  alarm.py  diary.py  diary_summary.py  email_token.py  hashtag.py  persona.py  push_subscription.py  user.py
app/schemas/: alarm.py  diary.py  persona.py  user.py
app/services/: alarm_scheduler.py  alarm_service.py  auth_service.py  diary_service.py  email_service.py  feedback_service.py  gpt_service.py  redis_service.py  search_service.py  stt_service.py  tts_service.py  user_service.py
docs/: CONTRIBUTING.md  features.md  pytest-guide.md
frontend/: ai-persona.html  alarm.html  diary_detail.html  diary_read.html  diary_write.html  index.html  login.html  my-diary.html  my_profile.html  persona-onboarding.html  profile.html  reset-password.html  settings.html
frontend/css/: style.css
frontend/js/: alarm.js  api.js  auth-guard.js  auth.js  base.js  diary.js  frontend.js  my_profile.js  nav.js  particles.js  search.js  stt.js
frontend/test/: alarm.html
nginx/: nginx.conf
scripts/: generate_voice_samples.py  seed_diaries.py
terraform/: ec2.tf  main.tf  outputs.tf  security_group.tf  variables.tf
tests/: conftest.py  test_auth.py  test_diary.py  test_health.py
